infrastructure/ingresses/portainer/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-portainer
  namespace: portainer
spec:
  stripPrefix:
    prefixes:
      - /portainer
