infrastructure/ingresses/portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: "portainer-strip-portainer@kubernetescrd"
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - desafio.bonam.cc
      secretName: portainer-tls

  rules:
    - host: desafio.bonam.cc
      http:
        paths:
          - path: /portainer
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  name: http
